ocp_virt_autoscale_app/deploy-manifest/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: custom-autoscale-app
  namespace: celery-workers
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
  selector:
    name: custom-autoscale-app
